# fnos-rescue

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  recovery-case.yml
.github/workflows/: ci.yml  codeql.yml  live-iso.yml  release.yml
docs/: ARCHITECTURE.md  FNOS-BTRFS.md  HARDENING-TRACKER-v0.1.2.zh-CN.md  MACOS.zh-CN.md  PROJECT-PLAN.zh-CN.md  ROADMAP.md  SAFETY.md  STAGE-1-LINUX-CORE.zh-CN.md  STAGE-2-FNOS-NATIVE.zh-CN.md  STAGE-3-WEB-UI.zh-CN.md  STAGE-4-GUIDED-RECOVERY.zh-CN.md  STAGE-5-PORTABLE-LIVE.zh-CN.md  STAGE-6-RELEASE-HARDENING.zh-CN.md  VERSIONING.md  WINDOWS.zh-CN.md
helpers/: augment_chunk_cache_from_devtree.py  build_synthetic_chunk_tree.py  copy_validated_paths.py  crc32c_compat.py  match_ufs_inventory.py  overlay_safety.py  scan_btrfs_roots.c  set_btrfs_historical_root.py  try_historical_subvolume_roots.py
integrations/codex/recover-fnos-btrfs-disks/: SKILL.md
live/config/archives/: debian-security.list.binary
live/config/package-lists/: fnos-rescue.list.chroot
packaging/debian/: control  fnos-rescue
packaging/fnos/: fnos-rescue-helper  fnos-rescue-web.service  install.sh  uninstall.sh
scripts/: build-deb.sh  build-fnos-package.sh  build-live-iso.sh  build-private-btrfs.sh  build-recovery-tools.sh  clean-release.sh  collect-live-iso-diagnostics.sh  generate-release-metadata.py  live-ready.sh  live-session.sh  release-preflight.sh  security-scan.sh  test-disposable-btrfs-e2e.sh  test-fnos-package-lifecycle.sh  test-live-iso.sh  validate-live-profile.sh  verify-release-artifacts.py
scripts/windows/: inspect-wsl.ps1
src/fnos_rescue/: __init__.py  __main__.py  btrfs_jobs.py  cases.py  cli.py  destinations.py  devices.py  doctor.py  errors.py  executors.py  fnos.py  jobs.py  overlays.py  reports.py  runner.py  safety.py  verify.py  web.py
tests/: test_btrfs.py  test_btrfs_jobs.py  test_cases.py  test_chunk_cache_validation.py  test_copy_helper.py  test_crc32c.py  test_destinations.py  test_diagnostic_plugins.py  test_doctor.py  test_executors.py  test_fnos.py  test_fnos_helper.py  test_fnos_packaging.py  test_jobs.py  test_live_profile.py  test_overlay_write_guards.py  test_overlays.py  test_private_btrfs_hardening.py  test_release_metadata.py  test_reports.py  test_runner_interruptible.py  test_safety.py  test_verify.py  test_version.py  test_web.py
web/: .npmrc  package-lock.json  package.json
web/src/: empty-state.css  main.jsx  style.css
(+26 files in other folders)
