[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnos-rescue"
version = "0.1.0"
description = "Read-only-first recovery toolkit for deleted or unreadable FNOS Basic-disk Btrfs volumes"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "FNOS Rescue contributors"},
]
keywords = ["fnos", "btrfs", "data-recovery", "nas", "forensics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Recovery Tools",
]

[project.urls]
Homepage = "https://github.com/supermslab/fnos-rescue"
Issues = "https://github.com/supermslab/fnos-rescue/issues"

[project.scripts]
fnos-rescue = "fnos_rescue.cli:main"
rescuectl = "fnos_rescue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
