[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnos-rescue"
version = "0.1.2"
description = "Read-only-first recovery toolkit for deleted or unreadable FNOS Basic-disk Btrfs volumes"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  {name = "FNOS Rescue contributors"},
]
keywords = ["fnos", "btrfs", "data-recovery", "nas", "forensics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Recovery Tools",
]

[project.urls]
Homepage = "https://github.com/superms-lab/fnos-rescue"
Issues = "https://github.com/superms-lab/fnos-rescue/issues"

[project.scripts]
fnos-rescue = "fnos_rescue.cli:main"
rescuectl = "fnos_rescue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fnos_rescue = ["web_dist/index.html", "web_dist/assets/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
